--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </style>
 </head>
 <body>
-  <h1>Sitestruck 🚀</h1>
+  <h1>SiteStruck 🚀</h1>
   <p>Twoja strona w 5 minut — już wkrótce!</p>
 </body>
 </html>
+
