--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <h1>SiteStruck 🚀</h1>
-  <p>Twoja strona w 5 minut — już wkrótce!</p>
+  <p>Your site in 5 minutes — coming soon!</p>
 </body>
 </html>
+
 
