--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,7 @@
   <title>About - Sitestruck</title>
 </head>
 <body>
-  <h1>About Sitestruck</h1>
+  <h1>About SiteStruck</h1>
   <p>This is a test subpage for your project 🚀</p>
   <a href="index.html">Back to Home</a>
 </body>
