--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<a href="about.html">About Us</a>
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -15,4 +16,5 @@
   <p>Your site in 5 minutes — coming soon!</p>
 </body>
 </html>
+
 
