--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,37 @@
   <p>Your site in 5 minutes — coming soon!</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sitestruck - Home</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin:0; padding:0; }
+    header, footer { background:#222; color:#fff; text-align:center; padding:20px; }
+    nav a { margin:0 15px; color:#fff; text-decoration:none; }
+    main { padding:40px; text-align:center; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sitestruck 💪</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Welcome to your first website</h2>
+    <p>Build and customize with Sitestruck 🚀</p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
 
