--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sitestruck - Home</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; }
-    header, footer { background:#222; color:#fff; text-align:center; padding:20px; }
-    nav a { margin:0 15px; color:#fff; text-decoration:none; }
-    main { padding:40px; text-align:center; }
+    body { 
+      font-family: Arial, sans-serif; 
+      margin:0; 
+      padding:0; 
+      background:#f9f9f9; 
+      color:#333; 
+    }
+    header, footer { 
+      background:#222; 
+      color:#fff; 
+      text-align:center; 
+      padding:20px; 
+    }
+    nav { 
+      margin-top:10px;
+    }
+    nav a { 
+      margin:0 15px; 
+      color:#fff; 
+      text-decoration:none; 
+      font-weight:bold;
+    }
+    nav a:hover {
+      text-decoration:underline;
+    }
+    main { 
+      display:flex; 
+      flex-direction:column;
+      align-items:center; 
+      justify-content:center; 
+      min-height:60vh; 
+      text-align:center; 
+      padding:40px; 
+    }
+    main img { 
+      margin-top:20px; 
+      border-radius:12px; 
+      box-shadow:0 4px 10px rgba(0,0,0,0.2);
+    }
+    footer { 
+      font-size:14px; 
+    }
   </style>
 </head>
 <body>
@@ -22,14 +60,4 @@
   </header>
 
   <main>
-    <h2>Welcome to your first website</h2>
-    <p>Build and customize with Sitestruck 🚀</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
-  </footer>
-</body>
-</html>
-
-
+    <h2>Welcome to your
