--- a/src/index.html
+++ b/src/index.html
@@ -59,4 +59,18 @@
   </header>
 
   <main>
-    <h2>Welcome to your
+    <h2>Welcome to your first website 🚀</h2>
+    <p>
+      With Sitestruck, creating your own professional website has never been easier.  
+      Customize your design, add your logo, and launch your site in minutes.  
+      No coding required — just creativity and a few clicks!
+    </p>
+    <img src="logo.png" alt="Sitestruck logo" width="200">
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
