--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
       padding:0; 
       background:#f9f9f9; 
       color:#333; 
+      display:flex; 
+      flex-direction:column; 
+      min-height:100vh; /* Cała wysokość okna przeglądarki */
     }
     header, footer { 
       background:#222; 
@@ -31,11 +34,11 @@
       text-decoration:underline;
     }
     main { 
+      flex:1; /* wypełnia przestrzeń między headerem a footerem */
       display:flex; 
       flex-direction:column;
       align-items:center; 
       justify-content:center; 
-      min-height:60vh; 
       text-align:center; 
       padding:40px; 
     }
@@ -73,4 +76,6 @@
   </footer>
 </body>
 </html>
+
+
 
