--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,22 @@
       font-size:14px; 
     }
   </style>
+     .cta-button {
+  display:inline-block;
+  margin-top:25px;
+  padding:12px 24px;
+  font-size:18px;
+  font-weight:bold;
+  color:#fff;
+  background:#ff5733;
+  text-decoration:none;
+  border-radius:8px;
+  transition: background 0.3s ease;
+}
+.cta-button:hover {
+  background:#e64a19;
+}
+
 </head>
 <body>
   <header>
