--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       color:#333; 
       display:flex; 
       flex-direction:column; 
-      min-height:100vh; /* Cała wysokość okna przeglądarki */
+      min-height:100vh; 
     }
     header, footer { 
       background:#222; 
@@ -34,7 +34,7 @@
       text-decoration:underline;
     }
     main { 
-      flex:1; /* wypełnia przestrzeń między headerem a footerem */
+      flex:1; 
       display:flex; 
       flex-direction:column;
       align-items:center; 
@@ -50,23 +50,22 @@
     footer { 
       font-size:14px; 
     }
+    .cta-button {
+      display:inline-block;
+      margin-top:25px;
+      padding:12px 24px;
+      font-size:18px;
+      font-weight:bold;
+      color:#fff;
+      background:#ff5733;
+      text-decoration:none;
+      border-radius:8px;
+      transition: background 0.3s ease;
+    }
+    .cta-button:hover {
+      background:#e64a19;
+    }
   </style>
-     .cta-button {
-  display:inline-block;
-  margin-top:25px;
-  padding:12px 24px;
-  font-size:18px;
-  font-weight:bold;
-  color:#fff;
-  background:#ff5733;
-  text-decoration:none;
-  border-radius:8px;
-  transition: background 0.3s ease;
-}
-.cta-button:hover {
-  background:#e64a19;
-}
-
 </head>
 <body>
   <header>
@@ -85,7 +84,7 @@
       No coding required — just creativity and a few clicks!
     </p>
     <img src="logo.png" alt="Sitestruck logo" width="200">
-    
+
     <a href="about.html" class="cta-button">Get Started</a>
   </main>
 
