--- a/src/about.html
+++ b/src/about.html
@@ -9,6 +9,7 @@
 <body>
   <h1>About SiteStruck</h1>
   <p>This is a test subpage for your project 🚀</p>
+  <img src="logo.png" alt="My logo">
   <a href="index.html">Back to Home</a>
 </body>
 </html>
