--- a/src/about.html
+++ b/src/about.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Sitestruck</title>
+  <h1>Sitestruck 💪</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+    </nav>
 </head>
 <body>
   <h1>About SiteStruck</h1>
