--- a/src/about.html
+++ b/src/about.html
@@ -13,6 +13,10 @@
   <img src="logo.png" alt="My logo">
   
   <a href="index.html">Back to Home</a>
+  <main>
+    <footer>
+    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
+  </footer>
 </body>
 </html>
 
