--- a/src/about.html
+++ b/src/about.html
@@ -1,21 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <h1>Sitestruck 💪</h1>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About - Sitestruck</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header, footer {
+      background: #222;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+    nav a {
+      margin: 0 15px;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 40px;
+      text-align: center;
+    }
+    img {
+      margin: 20px 0;
+      width: 150px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    a.cta-button {
+      display: inline-block;
+      padding: 12px 24px;
+      margin-top: 20px;
+      background: #ff6600;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    a.cta-button:hover {
+      background: #e65c00;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sitestruck 💪</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
     </nav>
-</head>
-<body>
-  <h1>About SiteStruck</h1>
-  <p>This is a test subpage for your project 🚀</p>
-  <img src="logo.png" alt="My logo">
-  
-  <a href="index.html">Back to Home</a>
-    <footer>
+  </header>
+
+  <main>
+    <h2>About Sitestruck</h2>
+    <p>This project is here to show how easy it can be to create your own website 🚀</p>
+    <img src="logo.png" alt="My logo">
+    <a href="index.html" class="cta-button">⬅ Back to Home</a>
+  </main>
+
+  <footer>
     <p>&copy; 2025 Sitestruck. All rights reserved.</p>
   </footer>
 </body>
 </html>
-
