--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,7 @@
     <img src="logo.png" alt="Sitestruck logo" width="200">
 
     <a href="about.html" class="cta-button">Get Started</a>
+    <a href="about.html" class="cta-button secondary">Learn More</a>
   </main>
 
   <footer>
