--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sitestruck - Home</title>
+  <title>SiteStruck - Home</title>
   <style>
     body { 
       font-family: Arial, sans-serif; 
@@ -79,7 +79,7 @@
   <main>
     <h2>Welcome to your first website 🚀</h2>
     <p>
-      With Sitestruck, creating your own professional website has never been easier.  
+      With SiteStruck, creating your own professional website has never been easier.  
       Customize your design, add your logo, and launch your site in minutes.  
       No coding required — just creativity and a few clicks!
     </p>
@@ -90,7 +90,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
+    <p>&copy; 2025 SiteStruck. All rights reserved.</p>
   </footer>
 </body>
 </html>
