--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,13 @@
     .cta-button:hover {
       background:#e64a19;
     }
+     .secondary {
+       background: #28a745;
+    }
+     .secondary:hover {
+       background: #218838;
+    }
+
   </style>
 </head>
 <body>
