--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
   <header>
-    <h1>Sitestruck 💪</h1>
+    <h1>SiteStruck 💪</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
