--- a/src/index.html
+++ b/src/index.html
@@ -106,12 +106,14 @@
 </head>
 <body>
   <header>
-    <h1>SiteStruck 💪</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-    </nav>
-  </header>
+  <h1>Sitestruck 💪</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
 
   <main>
     <h2>Welcome to your first website 🚀</h2>
