--- a/src/about.html
+++ b/src/about.html
@@ -74,7 +74,7 @@
 
 
   <main>
-    <h2>About Sitestruck</h2>
+    <h2>About SiteStruck</h2>
     <p>This project is here to show how easy it can be to create your own website 🚀</p>
     <img src="logo.png" alt="My logo">
     <a href="index.html" class="cta-button">⬅ Back to Home</a>
