--- a/src/contact.html
+++ b/src/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Sitestruck</title>
+  <title>Contact - SiteStruck</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -91,7 +91,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
+    <p>&copy; 2025 SiteStruck. All rights reserved.</p>
   </footer>
 </body>
 </html>
