--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="logo.png" type="image/png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Sitestruck</title>
+  <title>About - SiteStruck</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -81,7 +81,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Sitestruck. All rights reserved.</p>
+    <p>&copy; 2025 SiteStruck. All rights reserved.</p>
   </footer>
 </body>
 </html>
