--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SiteStruck - Home</title>
   <style>
+    @media (max-width: 600px) {
+  nav a {
+    display: block;
+    margin: 10px 0;
+  }
+  main {
+    padding: 20px;
+  }
+}
           .contact-form {
       display: flex;
       flex-direction: column;
