--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About - SiteStruck</title>
   <style>
+    @media (max-width: 600px) {
+  nav a {
+    display: block;
+    margin: 10px 0;
+  }
+  main {
+    padding: 20px;
+  }
+}
     body {
       font-family: Arial, sans-serif;
       margin: 0;
