--- a/src/contact.html
+++ b/src/contact.html
@@ -92,11 +92,11 @@
 
   <main>
     <h2>Contact Us</h2>
-    <form action="#" method="post" class="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
+    <form name="contact" method="POST" data-netlify="true">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+  <button type="submit">Send Message</button>
     </form>
   </main>
 
