--- a/src/contact.html
+++ b/src/contact.html
@@ -91,14 +91,14 @@
   </header>
 
   <main>
-    <h2>Contact Us</h2>
-    <form name="contact" method="POST" data-netlify="true">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-  <button type="submit">Send Message</button>
-    </form>
-  </main>
+  <h2>Contact Us</h2>
+  <form name="contact" method="POST" data-netlify="true" class="contact-form">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</main>
 
   <footer>
     <p>&copy; 2025 SiteStruck. All rights reserved.</p>
