--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,14 @@
     <a href="about.html" class="cta-button">Get Started</a>
     <a href="about.html" class="cta-button secondary">Learn More</a>
   </main>
+  <section>
+  <h2>Why Choose SiteStruck?</h2>
+  <ul>
+    <li>🚀 Easy to use editor</li>
+    <li>💸 Affordable monthly plans</li>
+    <li>🌍 Available worldwide</li>
+  </ul>
+</section>
 
   <footer>
     <p>&copy; 2025 SiteStruck. All rights reserved.</p>
