--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SiteStruck - Home</title>
   <style>
+    .features {
+  background: #f0f4ff;
+  padding: 50px 20px;
+  text-align: center;
+}
+.features h2 {
+  font-size: 28px;
+  margin-bottom: 30px;
+  color: #222;
+}
+.feature-list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.feature {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  max-width: 280px;
+  flex: 1;
+}
+.feature h3 {
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #007bff;
+}
+
     @media (max-width: 600px) {
   nav a {
     display: block;
@@ -134,13 +164,22 @@
     <img src="logo.png" alt="Sitestruck logo" width="200">
 
     <a href="about.html" class="cta-button">Get Started</a>
-    <section>
+    <section class="features">
   <h2>Why Choose SiteStruck?</h2>
-  <ul>
-    <li>🚀 Easy to use editor</li>
-    <li>💸 Affordable monthly plans</li>
-    <li>🌍 Available worldwide</li>
-  </ul>
+  <div class="feature-list">
+    <div class="feature">
+      <h3>🚀 Easy Website Builder</h3>
+      <p>Create your site in minutes — no coding required.</p>
+    </div>
+    <div class="feature">
+      <h3>💸 Affordable Plans</h3>
+      <p>Only 55 PLN per month for a full-featured website.</p>
+    </div>
+    <div class="feature">
+      <h3>🌍 Global Access</h3>
+      <p>Your site is fast, secure, and available worldwide.</p>
+    </div>
+  </div>
 </section>
     <a href="about.html" class="cta-button secondary">Learn More</a>
   </main>
