--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,8 @@
     <section class="features">
   <h2>Why Choose SiteStruck?</h2>
   <div class="feature-list">
+      <a href="contact.html" class="cta-button">Start Now</a>
+</section>
     <div class="feature">
       <h3>🚀 Easy Website Builder</h3>
       <p>Create your site in minutes — no coding required.</p>
