--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SiteStruck - Home</title>
   <style>
+    .cta-button {
+  display: inline-block;
+  margin-top: 30px;
+  padding: 14px 28px;
+  background: linear-gradient(90deg, #007bff, #0056b3);
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: transform 0.2s, background 0.3s;
+}
+.cta-button:hover {
+  transform: scale(1.05);
+  background: linear-gradient(90deg, #0056b3, #003f7f);
+}
+
     .features {
   background: #f0f4ff;
   padding: 50px 20px;
