--- a/src/index.html
+++ b/src/index.html
@@ -200,6 +200,7 @@
       <p>Your site is fast, secure, and available worldwide.</p>
     </div>
   </div>
+    <a href="contact.html" class="cta-button">Start Now</a>
 </section>
     <a href="about.html" class="cta-button secondary">Learn More</a>
   </main>
