--- a/src/index.html
+++ b/src/index.html
@@ -38,15 +38,15 @@
   display: flex;
   justify-content: center;
   gap: 30px;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /* dzięki temu na małych ekranach ułożą się pionowo */
 }
 .feature {
   background: white;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  max-width: 280px;
-  flex: 1;
+  width: 250px; /* sztywna szerokość dla lepszego rzędu */
+  text-align: center;
 }
 .feature h3 {
   margin-bottom: 10px;
