--- a/src/about.html
+++ b/src/about.html
@@ -76,6 +76,7 @@
   <h1>SiteStruck 💪</h1>
   <nav>
     <a href="index.html">Home</a>
+    <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
