--- a/src/pricing.html
+++ b/src/pricing.html
@@ -16,7 +16,7 @@
       color: #333;
     }
     header, footer {
-      background: #003f7f; /* ciemny niebieski zamiast jasnego */
+      background: #222; /* taki jak w pozostałych */
       color: white;
       text-align: center;
       padding: 20px;
@@ -50,13 +50,13 @@
     }
     .plan h2 {
       margin-bottom: 10px;
-      color: #007bff;
+      color: #222;
     }
     .plan p {
       margin-bottom: 20px;
     }
     .plan button {
-      background: #007bff;
+      background: #222;
       color: white;
       border: none;
       padding: 12px 24px;
@@ -66,7 +66,7 @@
       transition: background 0.3s;
     }
     .plan button:hover {
-      background: #0056b3;
+      background: #000;
     }
   </style>
 </head>
@@ -75,7 +75,7 @@
     <h1>SiteStruck Pricing</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="pricing.html">Pricing</a>
+       <a href="pricing.html">Pricing</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -104,3 +104,4 @@
   </footer>
 </body>
 </html>
+
