--- a/src/pricing.html
+++ b/src/pricing.html
@@ -16,10 +16,13 @@
       color: #333;
     }
     header, footer {
-      background: #222; /* taki jak w pozostałych */
+      background: #222;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 20px; /* identycznie jak w innych plikach */
+    }
+    nav {
+      margin-top: 10px; /* żeby nawigacja nie kleiła się do tytułu */
     }
     nav a {
       margin: 0 15px;
@@ -72,10 +75,10 @@
 </head>
 <body>
   <header>
-    <h1>SiteStruck Pricing</h1>
+    <h1>SiteStruck</h1>
     <nav>
       <a href="index.html">Home</a>
-       <a href="pricing.html">Pricing</a>
+      <a href="pricing.html">Pricing</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -104,4 +107,3 @@
   </footer>
 </body>
 </html>
-
