--- a/src/pricing.html
+++ b/src/pricing.html
@@ -53,21 +53,102 @@
     }
     .plan h2 {
       margin-bottom: 10px;
+      color: #222;<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pricing - SiteStruck</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background: #f9f9f9;
+      color: #333;
+    }
+
+    header, footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      flex: 1;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 2em;
+      margin-bottom: 40px;
+    }
+
+    .pricing-plans {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      flex-wrap: wrap;
+    }
+
+    .plan {
+      background: white;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+      width: 320px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .plan:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    }
+
+    .plan h2 {
+      margin-bottom: 15px;
       color: #222;
     }
-    .plan p {
-      margin-bottom: 20px;
+
+    .plan h3 {
+      font-size: 22px;
+      margin: 15px 0;
+      color: #007bff;
     }
+
+    .plan p {
+      font-size: 16px;
+      margin-bottom: 20px;
+      color: #555;
+    }
+
     .plan button {
       background: #222;
       color: white;
       border: none;
-      padding: 12px 24px;
+      padding: 14px 28px;
       font-size: 16px;
       border-radius: 6px;
       cursor: pointer;
       transition: background 0.3s;
     }
+
     .plan button:hover {
       background: #000;
     }
@@ -89,14 +170,20 @@
     <div class="pricing-plans">
       <div class="plan">
         <h2>Basic</h2>
-        <p>Perfect for personal projects.</p>
+        <p>Perfect for personal projects or small portfolios.</p>
         <h3>55 PLN / month</h3>
         <button>Subscribe</button>
       </div>
       <div class="plan">
         <h2>Premium</h2>
-        <p>For growing businesses with extra features.</p>
+        <p>For growing businesses with advanced features.</p>
         <h3>99 PLN / month</h3>
+        <button>Subscribe</button>
+      </div>
+      <div class="plan">
+        <h2>Enterprise</h2>
+        <p>Custom solutions and full support for companies.</p>
+        <h3>149 PLN / month</h3>
         <button>Subscribe</button>
       </div>
     </div>
