--- a/src/pricing.html
+++ b/src/pricing.html
@@ -156,14 +156,14 @@
 </head>
 <body>
   <header>
-    <h1>SiteStruck</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+  <h1 style="font-size: 2.5em; margin: 0;">SiteStruck</h1>
+  <nav style="margin-top: 15px;">
+    <a href="index.html">Home</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
   <main>
     <h2>Choose Your Plan</h2>
