--- a/src/pricing.html
+++ b/src/pricing.html
@@ -15,23 +15,23 @@
       background: #f9f9f9;
       color: #333;
     }
-    header, footer {
-      background: #222;
-      color: white;
-      text-align: center;
-      padding: 20px; /* identycznie jak w innych plikach */
+    header, footer { 
+      background:#222; 
+      color:#fff; 
+      text-align:center; 
+      padding:20px; 
     }
-    nav {
-      margin-top: 10px; /* żeby nawigacja nie kleiła się do tytułu */
+    nav { 
+      margin-top:10px;
     }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
+    nav a { 
+      margin:0 15px; 
+      color:#fff; 
+      text-decoration:none; 
+      font-weight:bold;
     }
     nav a:hover {
-      text-decoration: underline;
+      text-decoration:underline;
     }
     main {
       flex: 1;
