--- a/src/pricing.html
+++ b/src/pricing.html
@@ -1,65 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pricing - SiteStruck</title>
   <link rel="icon" href="logo.png" type="image/png">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pricing - SiteStruck</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header, footer { 
-      background:#222; 
-      color:#fff; 
-      text-align:center; 
-      padding:20px; 
-    }
-    nav { 
-      margin-top:10px;
-    }
-    nav a { 
-      margin:0 15px; 
-      color:#fff; 
-      text-decoration:none; 
-      font-weight:bold;
-    }
-    nav a:hover {
-      text-decoration:underline;
-    } 
-    main {
-      flex: 1;
-      padding: 50px 20px;
-      text-align: center;
-    }
-    .pricing-plans {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      flex-wrap: wrap;
-    }
-    .plan {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      width: 280px;
-    }
-    .plan h2 {
-      margin-bottom: 10px;
-      color: #222;<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pricing - SiteStruck</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -76,11 +21,15 @@
       background: #222;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 30px;
+    }
+
+    nav {
+      margin-top: 15px;
     }
 
     nav a {
-      margin: 0 15px;
+      margin: 0 20px;
       text-decoration: none;
       color: white;
       font-weight: bold;
@@ -153,18 +102,31 @@
     .plan button:hover {
       background: #000;
     }
+
+    @media (max-width: 900px) {
+      .pricing-plans {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .plan {
+        width: 90%;
+        max-width: 400px;
+        margin-bottom: 20px;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-  <h1 style="font-size: 2.5em; margin: 0;">SiteStruck</h1>
-  <nav style="margin-top: 15px;">
-    <a href="index.html">Home</a>
-    <a href="pricing.html">Pricing</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <h1>SiteStruck</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
   <main>
     <h2>Choose Your Plan</h2>
