--- a/src/pricing.html
+++ b/src/pricing.html
@@ -17,33 +17,37 @@
       color: #333;
     }
 
-    header, footer {
-      background: #222;
-      color: white;
-      text-align: center;
-      padding: 20px;
+   header, footer { 
+      background:#222; 
+      color:#fff; 
+      text-align:center; 
+      padding:20px; 
     }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
+    nav { 
+      margin-top:10px;
     }
-
+    nav a { 
+      margin:0 15px; 
+      color:#fff; 
+      text-decoration:none; 
+      font-weight:bold;
+    }
     nav a:hover {
-      text-decoration: underline;
+      text-decoration:underline;
     }
-
-    main {
-      flex: 1;
-      padding: 40px 20px;
-      text-align: center;
+    main { 
+      flex:1; 
+      display:flex; 
+      flex-direction:column;
+      align-items:center; 
+      justify-content:center; 
+      text-align:center; 
+      padding:40px; 
     }
-
-    h2 {
-      font-size: 2em;
-      margin-bottom: 40px;
+    main img { 
+      margin-top:20px; 
+      border-radius:12px; 
+      box-shadow:0 4px 10px rgba(0,0,0,0.2);
     }
 
     .pricing-plans {
