--- a/src/pricing.html
+++ b/src/pricing.html
@@ -16,8 +16,7 @@
       flex-direction:column; 
       min-height:100vh; 
     }
-
-   header, footer { 
+    header, footer { 
       background:#222; 
       color:#fff; 
       text-align:center; 
@@ -48,6 +47,9 @@
       margin-top:20px; 
       border-radius:12px; 
       box-shadow:0 4px 10px rgba(0,0,0,0.2);
+    }
+    footer { 
+      font-size:14px; 
     }
 
     .pricing-plans {
