--- a/src/pricing.html
+++ b/src/pricing.html
@@ -108,7 +108,7 @@
 </head>
 <body>
   <header>
-    <h1>SiteStruck</h1>
+    <h1>SiteStruck💪</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="pricing.html">Pricing</a>
