--- a/src/pricing.html
+++ b/src/pricing.html
@@ -5,110 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pricing - SiteStruck</title>
   <link rel="icon" href="logo.png" type="image/png">
-  <style>
-     body { 
-      font-family: Arial, sans-serif; 
-      margin:0; 
-      padding:0; 
-      background:#f9f9f9; 
-      color:#333; 
-      display:flex; 
-      flex-direction:column; 
-      min-height:100vh; 
-    }
-    header, footer { 
-      background:#222; 
-      color:#fff; 
-      text-align:center; 
-      padding:20px; 
-    }
-    nav { 
-      margin-top:10px;
-    }
-    nav a { 
-      margin:0 15px; 
-      color:#fff; 
-      text-decoration:none; 
-      font-weight:bold;
-    }
-    nav a:hover {
-      text-decoration:underline;
-    }
-    main { 
-      flex:1; 
-      display:flex; 
-      flex-direction:column;
-      align-items:center; 
-      justify-content:center; 
-      text-align:center; 
-      padding:40px; 
-    }
-    main img { 
-      margin-top:20px; 
-      border-radius:12px; 
-      box-shadow:0 4px 10px rgba(0,0,0,0.2);
-    }
-    footer { 
-      font-size:14px; 
-    }
-
-    .pricing-plans {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      flex-wrap: wrap;
-    }
-
-    .plan {
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      width: 280px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .plan:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-    }
-
-    .plan h2 {
-      margin-bottom: 10px;
-      color: #222;
-    }
-
-    .plan h3 {
-      font-size: 20px;
-      margin: 12px 0;
-      color: #007bff;
-    }
-
-    .plan p {
-      font-size: 15px;
-      margin-bottom: 18px;
-      color: #555;
-    }
-
-    .plan button {
-      background: #222;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      font-size: 15px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .plan button:hover {
-      background: #000;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>SiteStruck 💪</h1>
+    <h1>SiteStruck</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="pricing.html">Pricing</a>
@@ -146,3 +47,4 @@
   </footer>
 </body>
 </html>
+
