--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,26 @@
 
   <main>
     <h2>Welcome to SiteStruck 🚀</h2>
-    <p>Create your own website easily and affordably.</p>
+    <p>Create your own professional website in minutes without coding.</p>
     <button>Get Started</button>
+
+    <section>
+      <h2>Why Choose SiteStruck?</h2>
+      <div class="pricing-plans">
+        <div class="plan">
+          <h2>Easy to Use</h2>
+          <p>Drag, drop, and create your dream site effortlessly.</p>
+        </div>
+        <div class="plan">
+          <h2>Affordable</h2>
+          <p>Plans starting at just 55 PLN/month.</p>
+        </div>
+        <div class="plan">
+          <h2>Reliable</h2>
+          <p>Fast, secure, and always online for your customers.</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -29,6 +47,5 @@
   </footer>
 </body>
 </html>
-
 
 
