--- a/src/about.html
+++ b/src/about.html
@@ -20,7 +20,22 @@
 
   <main>
     <h2>About SiteStruck</h2>
-    <p>We make creating websites easy, affordable, and fun. No coding skills required.</p>
+    <p>At SiteStruck, we believe everyone deserves a professional website.</p>
+
+    <div class="pricing-plans">
+      <div class="plan">
+        <h2>Our Mission</h2>
+        <p>To make website creation simple and affordable for everyone.</p>
+      </div>
+      <div class="plan">
+        <h2>Our Vision</h2>
+        <p>Empowering millions to build their online presence without coding.</p>
+      </div>
+      <div class="plan">
+        <h2>Our Promise</h2>
+        <p>Quality, speed, and support you can always count on.</p>
+      </div>
+    </div>
   </main>
 
   <footer>
@@ -28,4 +43,5 @@
   </footer>
 </body>
 </html>
+
 
