--- a/src/contact.html
+++ b/src/contact.html
@@ -20,6 +20,8 @@
 
   <main>
     <h2>Contact Us</h2>
+    <p>We’d love to hear from you! Fill out the form below:</p>
+
     <form class="contact-form">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required>
