--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+  <section class="hero">
+  <div class="hero-content">
+    <h1>Create Your Website Effortlessly</h1>
+    <p>With SiteStruck, building a professional site takes minutes, not months.</p>
+    <button>Start Now</button>
+  </div>
+</section>
 
   <main>
     <h2>Welcome to SiteStruck 🚀</h2>
