--- a/src/pricing.html
+++ b/src/pricing.html
@@ -9,14 +9,20 @@
 </head>
 <body>
   <header>
-    <h1>SiteStruck</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+  <div class="logo-container">
+    <img src="logo.png" alt="SiteStruck Logo" class="logo">
+    <span class="site-name">SiteStruck</span>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="pricing.html">Pricing</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main>
     <h2>Choose Your Plan</h2>
