--- a/src/index.html
+++ b/src/index.html
@@ -61,17 +61,17 @@
     <div class="testimonial">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/user.png" alt="Client 1" class="icon">
       <p>"Thanks to SiteStruck, my website was online in minutes. Super easy!"</p>
-      <strong>— Anna K.</strong>
+      <strong>— Annie K.</strong>
     </div>
     <div class="testimonial">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/user.png" alt="Client 2" class="icon">
       <p>"I’ve tried many builders, but this one’s the best. Affordable and powerful."</p>
-      <strong>— Michał W.</strong>
+      <strong>— Michael W.</strong>
     </div>
     <div class="testimonial">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/user.png" alt="Client 3" class="icon">
       <p>"Fast, reliable and support helped me instantly. 10/10!"</p>
-      <strong>— Kasia B.</strong>
+      <strong>— Katty B.</strong>
     </div>
   </div>
 </section>
