--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-  <div class="logo-container">
-    <img src="logo.png" alt="SiteStruck Logo" class="logo">
-    <span class="site-name">SiteStruck</span>
+ <header class="site-header">
+  <div class="container">
+    <div class="logo">
+      <img src="logo.png" alt="SiteStruck Logo" />
+      <span>SiteStruck</span>
+    </div>
+    <nav>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="burger" id="burger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </nav>
   </div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="pricing.html">Pricing</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
 </header>
+
   <section class="hero">
   <div class="hero-content">
     <h1>Create Your Website Effortlessly</h1>
