--- a/src/pricing.html
+++ b/src/pricing.html
@@ -51,6 +51,14 @@
   <footer>
     <p>&copy; 2025 SiteStruck. All rights reserved.</p>
   </footer>
+  <script>
+  const burger = document.getElementById('burger');
+  const navLinks = document.getElementById('nav-links');
+
+  burger.addEventListener('click', () => {
+    navLinks.classList.toggle('show');
+  });
+</script>
 </body>
 </html>
 
