--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <header class="site-header">
+ <header class="main-header">
   <div class="container">
     <div class="logo">
-      <img src="logo.png" alt="SiteStruck Logo" />
+      <img src="logo.png" alt="SiteStruck Logo">
       <span>SiteStruck</span>
     </div>
-    <nav>
-      <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <div class="burger" id="burger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </div>
 </header>
