--- a/src/contact.html
+++ b/src/contact.html
@@ -8,19 +8,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-  <div class="logo-container">
-    <img src="logo.png" alt="SiteStruck Logo" class="logo">
-    <span class="site-name">SiteStruck</span>
+ <header class="main-header">
+  <div class="container">
+    <div class="logo">
+      <img src="logo.png" alt="SiteStruck Logo">
+      <span>SiteStruck</span>
+    </div>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="pricing.html">Pricing</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
 </header>
 
   <main>
