--- a/src/contact.html
+++ b/src/contact.html
@@ -9,19 +9,18 @@
 </head>
 <body>
  <header class="main-header">
-  <div class="container">
-    <div class="logo">
-      <img src="logo.png" alt="SiteStruck Logo">
-      <span>SiteStruck</span>
-    </div>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <div class="logo-container">
+    <img src="logo.png" alt="Logo" class="logo">
+    <span class="site-name">SiteStruck</span>
   </div>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
+
 
   <main>
     <h2>Contact Us</h2>
