--- a/src/pricing.html
+++ b/src/pricing.html
@@ -8,19 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="main-header">
-  <div class="container">
-    <div class="logo">
-      <img src="logo.png" alt="SiteStruck Logo">
-      <span>SiteStruck</span>
-    </div>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+ <header class="main-header">
+  <div class="logo-container">
+    <img src="logo.png" alt="Logo" class="logo">
+    <span class="site-name">SiteStruck</span>
   </div>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
   <main>
