--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <p>Create your own professional website in minutes without coding.</p>
     <button>Get Started</button>
 
-   <section>
+   <section class="fade-in">
   <h2>Why Choose SiteStruck?</h2>
   <div class="pricing-plans">
     <div class="plan">
