--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <header class="main-header">
-  <div class="logo-container">
+  <div class="logo-container" class="plan fade-in">
     <img src="logo.png" alt="Logo" class="logo">
     <span class="site-name">SiteStruck</span>
   </div>
@@ -21,8 +21,8 @@
   </nav>
 </header>
 
-  <section class="hero">
-  <div class="hero-content">
+  <section class="hero" class="fade-in">
+  <div class="hero-content" class="plan fade-in">
     <h1>Create Your Website Effortlessly</h1>
     <p>With SiteStruck, building a professional site takes minutes, not months.</p>
     <button>Start Now</button>
@@ -36,38 +36,38 @@
 
    <section class="fade-in">
   <h2>Why Choose SiteStruck?</h2>
-  <div class="pricing-plans">
-    <div class="plan">
+  <div class="pricing-plans" class="plan fade-in">
+    <div class="plan" class="plan fade-in">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/cursor.png" alt="Easy Icon" class="icon">
       <h2>Easy to Use</h2>
       <p>Drag, drop, and create your dream site effortlessly.</p>
     </div>
-    <div class="plan">
+    <div class="plan" class="plan fade-in">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/money.png" alt="Affordable Icon" class="icon">
       <h2>Affordable</h2>
       <p>Plans starting at just 55 PLN/month.</p>
     </div>
-    <div class="plan">
+    <div class="plan" class="plan fade-in">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/security-checked.png" alt="Reliable Icon" class="icon">
       <h2>Reliable</h2>
       <p>Fast, secure, and always online for your customers.</p>
     </div>
   </div>
 </section>
-    <section class="testimonials">
+    <section class="testimonials" class="fade-in">
   <h2>What Our Clients Say</h2>
-  <div class="testimonial-cards">
-    <div class="testimonial">
+  <div class="testimonial-cards" class="plan fade-in">
+    <div class="testimonial" class="plan fade-in">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/user.png" alt="Client 1" class="icon">
       <p>"Thanks to SiteStruck, my website was online in minutes. Super easy!"</p>
       <strong>— Annie K.</strong>
     </div>
-    <div class="testimonial">
+    <div class="testimonial" class="plan fade-in">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/user.png" alt="Client 2" class="icon">
       <p>"I’ve tried many builders, but this one’s the best. Affordable and powerful."</p>
       <strong>— Michael W.</strong>
     </div>
-    <div class="testimonial">
+    <div class="testimonial" class="plan fade-in">
       <img src="https://img.icons8.com/ios-filled/100/4caf50/user.png" alt="Client 3" class="icon">
       <p>"Fast, reliable and support helped me instantly. 10/10!"</p>
       <strong>— Katty B.</strong>
