--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="main-header">
-  <div class="logo-container">
+  <div class="logo-container" class="plan fade-in">
     <img src="logo.png" alt="Logo" class="logo">
     <span class="site-name">SiteStruck</span>
   </div>
@@ -25,16 +25,16 @@
     <h2>About SiteStruck</h2>
     <p>At SiteStruck, we believe everyone deserves a professional website.</p>
 
-    <div class="pricing-plans">
-      <div class="plan">
+    <div class="pricing-plans" class="plan fade-in">
+      <div class="plan" class="plan fade-in">
         <h2>Our Mission</h2>
         <p>To make website creation simple and affordable for everyone.</p>
       </div>
-      <div class="plan">
+      <div class="plan" class="plan fade-in">
         <h2>Our Vision</h2>
         <p>Empowering millions to build their online presence without coding.</p>
       </div>
-      <div class="plan">
+      <div class="plan" class="plan fade-in">
         <h2>Our Promise</h2>
         <p>Quality, speed, and support you can always count on.</p>
       </div>
