--- a/src/contact.html
+++ b/src/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <header class="main-header">
-  <div class="logo-container">
+  <div class="logo-container" class="plan fade-in">
     <img src="logo.png" alt="Logo" class="logo">
     <span class="site-name">SiteStruck</span>
   </div>
