--- a/src/pricing.html
+++ b/src/pricing.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <header class="main-header">
-  <div class="logo-container">
+  <div class="logo-container" class="plan fade-in">
     <img src="logo.png" alt="Logo" class="logo">
     <span class="site-name">SiteStruck</span>
   </div>
@@ -23,20 +23,20 @@
 
   <main>
     <h2>Choose Your Plan</h2>
-    <div class="pricing-plans">
-      <div class="plan">
+    <div class="pricing-plans" class="plan fade-in">
+      <div class="plan" class="plan fade-in">
         <h2>Basic</h2>
         <p>Perfect for personal projects or small portfolios.</p>
         <h3>55 PLN / month</h3>
         <button>Subscribe</button>
       </div>
-      <div class="plan">
+      <div class="plan" class="plan fade-in">
         <h2>Premium</h2>
         <p>For growing businesses with advanced features.</p>
         <h3>99 PLN / month</h3>
         <button>Subscribe</button>
       </div>
-      <div class="plan">
+      <div class="plan" class="plan fade-in">
         <h2>Enterprise</h2>
         <p>Custom solutions and full support for companies.</p>
         <h3>149 PLN / month</h3>
