--- a/src/pricing.html
+++ b/src/pricing.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <header class="main-header">
+ <header class="main-header" class="fade-in">
   <div class="logo-container" class="plan fade-in">
     <img src="logo.png" alt="Logo" class="logo">
     <span class="site-name">SiteStruck</span>
   </div>
-  <nav class="navbar">
+  <nav class="navbar" class="plan fade-in">
     <a href="index.html">Home</a>
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
