--- a/src/register.html
+++ b/src/register.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register - SiteStruck</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header class="main-header">
+  <div class="logo-container">
+    <img src="logo.png" alt="Logo" class="logo">
+    <span class="site-name">SiteStruck</span>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="login.html">Login</a>
+  </nav>
+</header>
+
+<main>
+  <h2>Create Account</h2>
+  <form id="registerForm">
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit">Register</button>
+  </form>
+  <p>Already have an account? <a href="login.html">Login here</a></p>
+</main>
+
+<script>
+document.getElementById('registerForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const user = document.getElementById('username').value;
+  const pass = document.getElementById('password').value;
+  
+  localStorage.setItem('user', JSON.stringify({ username: user, password: pass }));
+  alert('Registration successful! You can now log in.');
+  window.location.href = 'login.html';
+});
+</script>
+
+</body>
+</html>
 
