--- a/src/login.html
+++ b/src/login.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - SiteStruck</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header class="main-header">
+  <div class="logo-container">
+    <img src="logo.png" alt="Logo" class="logo">
+    <span class="site-name">SiteStruck</span>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="register.html">Register</a>
+  </nav>
+</header>
+
+<main>
+  <h2>Login</h2>
+  <form id="loginForm">
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+  </form>
+</main>
+
+<script>
+document.getElementById('loginForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const user = document.getElementById('username').value;
+  const pass = document.getElementById('password').value;
+  
+  const storedUser = JSON.parse(localStorage.getItem('user'));
+  
+  if (storedUser && storedUser.username === user && storedUser.password === pass) {
+    alert('Login successful!');
+    localStorage.setItem('loggedIn', 'true');
+    window.location.href = 'index.html';
+  } else {
+    alert('Invalid username or password');
+  }
+});
+</script>
+
+</body>
+</html>
 
