--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+    <a href="#" id="logoutBtn" style="display:none;">Logout</a>
+    <a href="login.html" id="loginBtn">Login</a>
   </nav>
 </header>
 
