--- a/src/login.html
+++ b/src/login.html
@@ -5,47 +5,98 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - SiteStruck</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #121212;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+
+    .auth-container {
+      background: #1e1e1e;
+      padding: 30px;
+      border-radius: 10px;
+      width: 350px;
+      text-align: center;
+    }
+
+    .auth-container h2 {
+      margin-bottom: 20px;
+    }
+
+    .auth-container input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+    }
+
+    .auth-container button {
+      width: 95%;
+      padding: 12px;
+      background: #4caf50;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .auth-container button:hover {
+      background: #45a049;
+    }
+
+    .toggle-link {
+      margin-top: 15px;
+      display: block;
+      color: #4caf50;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-<header class="main-header">
-  <div class="logo-container">
-    <img src="logo.png" alt="Logo" class="logo">
-    <span class="site-name">SiteStruck</span>
-  </div>
-  <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="register.html">Register</a>
-  </nav>
-</header>
-
-<main>
+<div class="auth-container" id="auth-container">
   <h2>Login</h2>
-  <form id="loginForm">
-    <input type="text" id="username" placeholder="Username" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button type="submit">Login</button>
-  </form>
-</main>
+  <input type="email" placeholder="Email" id="email">
+  <input type="password" placeholder="Password" id="password">
+  <button>Login</button>
+  <span class="toggle-link" onclick="toggleForm()">Don't have an account? Sign Up</span>
+</div>
 
 <script>
-document.getElementById('loginForm').addEventListener('submit', function(e) {
-  e.preventDefault();
-  const user = document.getElementById('username').value;
-  const pass = document.getElementById('password').value;
-  
-  const storedUser = JSON.parse(localStorage.getItem('user'));
-  
-  if (storedUser && storedUser.username === user && storedUser.password === pass) {
-    alert('Login successful!');
-    localStorage.setItem('loggedIn', 'true');
-    window.location.href = 'index.html';
-  } else {
-    alert('Invalid username or password');
+  let isLogin = true;
+
+  function toggleForm() {
+    const container = document.getElementById('auth-container');
+    if (isLogin) {
+      container.innerHTML = `
+        <h2>Sign Up</h2>
+        <input type="text" placeholder="Username" id="username">
+        <input type="email" placeholder="Email" id="email">
+        <input type="password" placeholder="Password" id="password">
+        <button>Sign Up</button>
+        <span class="toggle-link" onclick="toggleForm()">Already have an account? Login</span>
+      `;
+      isLogin = false;
+    } else {
+      container.innerHTML = `
+        <h2>Login</h2>
+        <input type="email" placeholder="Email" id="email">
+        <input type="password" placeholder="Password" id="password">
+        <button>Login</button>
+        <span class="toggle-link" onclick="toggleForm()">Don't have an account? Sign Up</span>
+      `;
+      isLogin = true;
+    }
   }
-});
 </script>
 
 </body>
 </html>
-
