--- a/src/login.html
+++ b/src/login.html
@@ -81,7 +81,7 @@
         <input type="text" placeholder="Username" id="username">
         <input type="email" placeholder="Email" id="email">
         <input type="password" placeholder="Password" id="password">
-        <button>Sign Up</button>
+        <button onclick="register()">Sign Up</button>
         <span class="toggle-link" onclick="toggleForm()">Already have an account? Login</span>
       `;
       isLogin = false;
@@ -90,10 +90,39 @@
         <h2>Login</h2>
         <input type="email" placeholder="Email" id="email">
         <input type="password" placeholder="Password" id="password">
-        <button>Login</button>
+        <button onclick="login()">Login</button>
         <span class="toggle-link" onclick="toggleForm()">Don't have an account? Sign Up</span>
       `;
       isLogin = true;
+    }
+  }
+
+  function register() {
+    const username = document.getElementById('username').value;
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    if (!username || !email || !password) {
+      alert('Please fill all fields!');
+      return;
+    }
+
+    localStorage.setItem('user', JSON.stringify({ username, email, password }));
+    alert('Registration successful! You can now login.');
+    toggleForm();
+  }
+
+  function login() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+    const user = JSON.parse(localStorage.getItem('user'));
+
+    if (user && user.email === email && user.password === password) {
+      alert(`Welcome, ${user.username}!`);
+      localStorage.setItem('loggedIn', 'true');
+      window.location.href = 'index.html';
+    } else {
+      alert('Invalid email or password!');
     }
   }
 </script>
